# BRIDGE

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  requirements.txt  setup.cfg  setup.py
data/: README.md
docs/: model_comparison.md
models/: README.md  label_encoder.pkl  logistic_regression.pkl  porter_stemmer.pkl
notebooks/: 01_eda_bert_modeling.ipynb  README.md
src/: __init__.py  predict.py  preprocessing.py
