# Setup Configuration
[metadata]
name = bridge-mental-health
version = 1.0.0
author = BRIDGE Team
description = BRIDGE: BERT Representations for Identifying Depression via Gradient Estimators
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/BRIDGE
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Text Processing :: Linguistic

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21.0
    pandas>=1.3.0
    scikit-learn>=1.0.0
    xgboost>=1.5.0
    nltk>=3.6.0
    joblib>=1.0.0

[options.extras_require]
dev =
    pytest>=6.0.0
    black>=21.0.0
    flake8>=3.9.0
    jupyter>=1.0.0

deep_learning =
    tensorflow==2.15.0
    tensorflow-hub==0.16.1
    tensorflow-text==2.15.0

all =
    %(dev)s
    %(deep_learning)s
